feat(cluster): nearest neighbour chain